
* paragraph-select is a new convenience function to select the paragraph
  surrounding the actual cursor position.

* search-string-set [arg] stores the <arg>, the currently selected text or the word under
  cursor in the search cache that is used by word-find[-backward|-forward] if no argument
  is given to those.

* inset-split is a new convenience function that splits an inset into two at the given
  cursor position. This is only implemented for text insets currently.

* tabular-style-insert: Insert a table in a specified style.


!!!The following LyX functions have been changed in 2.4:

* set-graphics-group was renamed to graphics-set-group.

* info-insert buffer vcs-*: renamed to info-insert vcs *

* file-insert: optional second parameter "ignorelang" to make the insertion
  ignore the inserted file's main language (and rather adapt it to the insertion
  context's language).


!!!The following LyX functions have been removed in 2.4:

* date-insert: obsoleted by info-insert date.

!!!The following LyX function has been added and then removed in 2.4 development cycle.

* bidi: used as a first solution to provide icons that change
  direction with language.


!!!The following LyX documents have been moved in 2.4:

* As a result of a major restructuring of the templates and example
  directories, almost all examples and templates files have been renamed and
  moved to subfolders that reflect the layout category.
  The files now have much more decriptive (and longer) names, and they use
  URL encoding for specific special characters such as '(', ')' and '&'.
  Notably also the file that opens for new users has been renamed (from
  splash.lyx to Welcome.lyx).


!!!The following new folders have been added to the LyX directory

* The examples and templates directories have been completely re-organized.
  They are now much more structured (by means of layout categories) and thus
  consist of many new subfolders. 


