@@ -4396,6 +4396,15 @@ def revert_koma_frontispiece(document):
         document.append_local_layout(frontispiece_def)
 
 
+def revert_spellchecker_ignore(document):
+    """Revert document spellchecker disctionary"""
+    i = 0
+    while True:
+        i = find_token(document.header, "\\spellchecker_ignore")
+        if i == -1:
+            return
+        del document.header[i]
+
 ##
 # Conversion hub
 #
@@ -4463,10 +4472,12 @@ convert = [
            [603, []],
            [604, []],
            [605, [convert_vcolumns2]],
-           [606, [convert_koma_frontispiece]]
+           [606, [convert_koma_frontispiece]],
+           [607, []]
           ]
 
-revert =  [[605, [revert_koma_frontispiece]],
+revert =  [[606, [revert_spellchecker_ignore]],
+           [605, [revert_koma_frontispiece]],
            [604, [revert_vcolumns2]],
            [603, [revert_branch_darkcols]],
            [602, [revert_darkmode_graphics]],
