@@ -24,7 +24,8 @@ public:
 
 	/// \name SpellChecker inherited methods
 	//@{
-	enum Result check(WordLangTuple const &) override;
+	enum Result check(WordLangTuple const &,
+			  std::vector<WordLangTuple> const &) override;
 	void suggest(WordLangTuple const &, docstring_list &) override;
 	void stem(WordLangTuple const &, docstring_list &) override {}
 	void insert(WordLangTuple const &) override;
