@@ -961,6 +961,7 @@ int Buffer::readHeader(Lexer & lex)
 	params().biblatex_citestyle.erase();
 	params().multibib.erase();
 	params().lineno_opts.clear();
+	params().spellignore().clear();
 
 	for (int i = 0; i < 4; ++i) {
 		params().user_defined_bullet(i) = ITEMIZE_DEFAULTS[i];
