@@ -67,6 +67,7 @@
 
 #include "support/convert.h"
 #include "support/debug.h"
+#include "support/docstring_list.h"
 #include "support/filetools.h"
 #include "support/gettext.h"
 #include "support/lassert.h"
@@ -2730,6 +2731,47 @@ void Text::dispatch(Cursor & cur, FuncRequest & cmd)
 		break;
 	}
 
+	case LFUN_SPELLING_ADD_LOCAL: {
+		Language const * language = getLanguage(cur, cmd.getArg(1));
+		docstring word = from_utf8(cmd.getArg(0));
+		if (word.empty()) {
+			word = cur.selectionAsString(false);
+			if (word.size() > 100)
+				break;
+			if (word.empty()) {
+				// Get word or selection
+				selectWordWhenUnderCursor(cur, WHOLE_WORD);
+				word = cur.selectionAsString(false);
+			}
+		}
+		WordLangTuple wl(word, language);
+		bool has_item = false;
+		vector<WordLangTuple> il = bv->buffer().params().spellignore();
+		vector<WordLangTuple>::const_iterator it = il.begin();
+		for (; it != il.end(); ++it) {
+			if (it->lang()->code() != wl.lang()->code())
+				continue;
+			if (it->word() == wl.word()) {
+				has_item = true;
+				break;
+			}
+		}
+		if (!has_item) {
+			cur.recordUndoBufferParams();
+			bv->buffer().params().spellignore().push_back(wl);
+			cur.recordUndo();
+			// trigger re-check
+			WordLangTuple wl;
+			docstring_list suggestions;
+			Paragraph const & par = cur.paragraph();
+			pos_type from = cur.pos();
+			pos_type to = from;
+			par.spellCheck(from, to, wl, suggestions, true, true);
+		}
+		break;
+	}
+	
+
 	case LFUN_SPELLING_IGNORE: {
 		Language const * language = getLanguage(cur, cmd.getArg(1));
 		docstring word = from_utf8(cmd.getArg(0));
@@ -3459,6 +3501,7 @@ bool Text::getStatus(Cursor & cur, FuncRequest const & cmd,
 		break;
 
 	case LFUN_SPELLING_ADD:
+	case LFUN_SPELLING_ADD_LOCAL:
 	case LFUN_SPELLING_IGNORE:
 	case LFUN_SPELLING_REMOVE:
 		enable = theSpellChecker() != nullptr;
