@@ -862,10 +862,12 @@ void MenuDefinition::expandSpellingSuggestions(BufferView const * bv)
 				docstring const arg = wl.word() + " " + from_ascii(wl.lang()->lang());
 				add(MenuItem(MenuItem::Command, qt_("Add to personal dictionary|n"),
 						FuncRequest(LFUN_SPELLING_ADD, arg)));
-				add(MenuItem(MenuItem::Command, qt_("Ignore|g"),
+				add(MenuItem(MenuItem::Command, qt_("Ignore this occurrence|g"),
 						FuncRequest(LFUN_FONT_NO_SPELLCHECK, arg)));
-				add(MenuItem(MenuItem::Command, qt_("Ignore all|I"),
+				add(MenuItem(MenuItem::Command, qt_("Ignore all for this session|I"),
 						FuncRequest(LFUN_SPELLING_IGNORE, arg)));
+				add(MenuItem(MenuItem::Command, qt_("Ignore all in this document|d"),
+						FuncRequest(LFUN_SPELLING_ADD_LOCAL, arg)));
 			}
 		}
 		break;
