@@ -32,8 +32,8 @@ extern char const * const lyx_version_info;
 
 // Do not remove the comment below, so we get merge conflict in
 // independent branches. Instead add your own.
-#define LYX_FORMAT_LYX 606 // spitz: frontispiece KOMA layout
-#define LYX_FORMAT_TEX2LYX 606
+#define LYX_FORMAT_LYX 607 // spitz: \\spellchecker_ignore buffer param
+#define LYX_FORMAT_TEX2LYX 607
 
 #if LYX_FORMAT_TEX2LYX != LYX_FORMAT_LYX
 #ifndef _MSC_VER
